[tool.poetry]
name = "stable-diffusion"
version = "0.1.0"
description = ""
authors = ["Harsh Vardhan <openroad@chez-vardhan.com>"]
readme = "README.md"
packages = [{include = "stable_diffusion"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "2.0.1"
torchvision = "^0.15.2"
transformers = "4.19.2"
diffusers = "^0.16.1"
invisible-watermark = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
